pxc/tests/test_19_thread/thrtest3.px
namespace ttest;
import test_common "";
import thread "";

struct my_thread_obj(int x0, int y0, io::ioptr const& sys0) {
  int x = x0;
  int y = y0;
  io::ioptr sys = sys0;
  function void main() {
    io::standard::stdout_println(sys, "my thread main");
    io::standard::stdout_println(sys, x);
  }
}

threadptr thr = thread_create(my_thread_obj(123, 456, io::io));
  // error: my_thread_obj is not threaded
thr.join();

